test/compile-fail/resolution/type-existence/block-scopes/top.rhdl
fn a() {
    {
        struct x {}
    }
    struct y(x);
}
